objects/Asset_Order__x.object
<CustomObject>
    <fields>
        <fullName>Action_Code__c</fullName>
        <externalDeveloperName>ACTION_CODE</externalDeveloperName>
        <label>Action Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Integration_Id__c</fullName>
        <description>Asset Integration Id</description>
        <externalDeveloperName>INTEGRATION_ID</externalDeveloperName>
        <label>Asset Integration Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <externalDeveloperName>ASSET_NUM</externalDeveloperName>
        <label>Asset Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_New_Value__c</fullName>
        <externalDeveloperName>ATTRIB_NEW_VAL</externalDeveloperName>
        <label>Attribute New Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Old_value__c</fullName>
        <externalDeveloperName>ATTRIB_OLD_VAL</externalDeveloperName>
        <label>Attribute Old Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <externalDeveloperName>ATTRIB_NAME</externalDeveloperName>
        <label>Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <externalDeveloperName>ORDER_DATE</externalDeveloperName>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Item_Id__c</fullName>
        <externalDeveloperName>ORDER_ITEM_ID</externalDeveloperName>
        <label>Order Item Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <externalDeveloperName>PRODUCT_PART_NUM</externalDeveloperName>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <externalDeveloperName>PRODUCT_NAME</externalDeveloperName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>